fix: figcaption positioning on mobile for Slider component

--- a/src/components/elements/Slider/styles.scss
+++ b/src/components/elements/Slider/styles.scss
@@ -3,13 +3,16 @@
   margin-left: auto;
 
   .swiper-container {
-    padding-bottom: 60px;
+    padding-bottom: 115px;
+    
+    @media (min-width: 768px ) {
+      padding-bottom: 60px;
+    }
   
     .swiper-wrapper {
       .swiper-slide {
         width: 100%;
         height: 415px;
-        border: 4px solid var(--c-background-100);
         opacity: 0.1;
         
         transition: border 1000ms ease-in-out;
@@ -31,12 +34,11 @@
 
           figcaption {
             position: absolute;
-            bottom: 0;
+            bottom: -65px;
             left: 0;
             width: 100%;
             padding: 12px;
             
-            background: var(--c-background-200);
             font-size: 1.4rem;
             line-height: 2rem;
             letter-spacing: 1.4px;
@@ -49,7 +51,6 @@
           
           @media (min-width: 500px) { 
             figcaption {
-              bottom: -65px;
               left: 50px;
               width: calc(100% - 165px);
               height: 50px;
@@ -65,7 +66,6 @@
       
       .swiper-slide-active {
         opacity: 1;
-        border: 4px solid var(--c-candy-red);
 
         figure figcaption { opacity: 1; }
       }
